Refactor trakt.tv import
